--- a/server/views/ABM/Plu/plu_table_1.ejs
+++ b/server/views/ABM/Plu/plu_table_1.ejs
@@ -32,7 +32,7 @@
                                 <tr>
                                     <form method="POST" id="newprice" action="/api/menu/abm/plu/formEditGral">
                                         <td class="td-edit">
-                                            <input type="submit" value="Edit">
+                                            <input type="submit" value="" class="btn-td-icon-edit">
                                         </td>
                                         <td>
                                             <input class="inputDisable" type="text" name="id"
