--- a/server/public/css/ABM/PLUs/plu_table_1.css
+++ b/server/public/css/ABM/PLUs/plu_table_1.css
@@ -153,14 +153,18 @@ a>h4 {
     outline: none;
 }
 
-.td-edit>input{
-    background-color: rgba(14, 128, 122, 0.575);
-    border: none;
-    outline: none;
-    color: #000000;
-    padding: 3px 3px;
-    margin: 1px;
+.btn-td-icon-edit{
+    position: relative;
+    background-image: url('../../../images/icons/edit.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    /*padding: 4px 4px;*/
     cursor: pointer;
+    border: none;
+    background-color: rgba(0, 255, 21, 0);
 }
 
 .container-table table thead th:first-child {
@@ -233,68 +237,3 @@ table td, table th {
     color: rgb(0, 0, 0);
 }
 
-.form-pagination {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    min-width: 80%;
-    max-width: 92%;
-    height: 8vh;
-}
-
-.page-controll {
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #ffffff;
-    font-family: sans-serif;
-}
-
-.page-controll>h4 {
-    display: inline-block;
-    position: relative;
-    flex-wrap: nowrap;
-}
-
-#inputPage {
-    display: inline-block;
-    position: relative;
-    width: 3.5em;
-    text-align: center;
-    padding: 2px 1px;
-    margin: 1px 0px;
-    outline: none;
-    border: none;
-    background-color: rgba(0, 0, 0, 0.151);
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 1rem;
-}
-
-#inputPage:hover {
-    background-color: rgba(255, 228, 196, 0.336);
-    cursor: text;
-}
-
-#inputPage::placeholder {
-    color: #ffffff;
-    font-weight: bold;
-}
-
-.btn-pagination {
-    background-color: #1c6f71;
-    color: #ffffff;
-    border: none;
-    outline: none;
-    border-radius: 0.2em;
-    margin-right: 1px;
-}
-
-.btn-pagination:hover {
-    background-color: rgba(10, 60, 73, 0.753);
-    cursor: pointer;
-}
-
-.btn-pagination:focus {
-    outline: none;
-}
