--- a/server/views/ABM/Plu/plu_form_princ.ejs
+++ b/server/views/ABM/Plu/plu_form_princ.ejs
@@ -6,13 +6,13 @@
     <body  onload="setMargin()">
         <div class="principal">
             <div class="container-btns">
-                <button id="DATOS" onclick="viewForm(this.id)">DATOS</button>
-                <button id="PRECIOS" onclick="viewForm(this.id)">PRECIOS</button>
-                <button id="AVANZADO" onclick="viewForm(this.id)">AVANZADO</button>
-                <button id="CODIGO" onclick="viewForm(this.id)">CÓD. BARRAS</button>
-                <button id="FECHAS" onclick="viewForm(this.id)">FECHAS</button>
-                <button id="AUDIT" onclick="viewForm(this.id)">AUDITORÍA</button>
-                <button>GUARDAR</button>
+                <button class="navbar" id="DATOS" onclick="viewForm(this.id)">DATOS</button>
+                <button class="navbar" id="PRECIOS" onclick="viewForm(this.id)">PRECIOS</button>
+                <button class="navbar" id="AVANZADO" onclick="viewForm(this.id)">AVANZADO</button>
+                <button class="navbar" id="CODIGO" onclick="viewForm(this.id)">CÓD. BARRAS</button>
+                <button class="navbar" id="FECHAS" onclick="viewForm(this.id)">FECHAS</button>
+                <button class="navbar" id="AUDIT" onclick="viewForm(this.id)">AUDITORÍA</button>
+                <button class="navbar">GUARDAR</button>
             </div>
             <div id="grand-container" class='grand-container'>
                 <form id="formGral" class="formGral">
