--- a/server/public/css/ABM/PLUs/plu_form_princ.css
+++ b/server/public/css/ABM/PLUs/plu_form_princ.css
@@ -23,13 +23,22 @@ body {
     filter: sepia(0.5);
 }
 
-.container-bts {
+.container-btns {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
     position: relative;
-    width: 80%;
+    width: 100%;
+    margin-bottom: 2%;
+}
 
+.navbar{
+    display: inline-block;
+    justify-content: center;
+    position: relative;
+    padding: 1% 0%;
+    margin: 0%;
+    border: none;
+    width: -webkit-fill-available;
 }
 
 .grand-container {
